# Staking

./: Cargo.toml
src/: error.rs  lib.rs  processor.rs
src/instructions/: initialize.rs  mod.rs  stake.rs  withdrew.rs
src/state/: mod.rs
