[package]
name = "practicespl"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
mpl-token-metadata = {version = "5.1.0"}
solana-program = "2.3.0"
spl-associated-token-account = {version="7.0.0",features=["no-entrypoint"]}
spl-token = {version="8.0.0",features=["no-entrypoint"]}
thiserror = "2.0.12"

[lib]
crate-type=["cdylib","lib"]